--- a/apps/frontend/src/app/global.css
+++ b/apps/frontend/src/app/global.css
@@ -1,6 +1,7 @@
-html {
+html,body {
   font-size: 62.5%;
   box-sizing: border-box;
+  margin: 0;
   min-height: 100%;
   scroll-behavior: smooth;
 }
